# hijridate

./: .coveragerc  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  AUTHORS.md  AUTHORS.rst  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  pytest.ini  release.sh  requirements-dev.txt  setup.cfg  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/workflows/: build-docs.yml  check-quality.yml  checks.yml  code-checks.yml  code.yml  docs.yml  draft-prep.yml  draft.yml  issues.yml  package-release.yml  publish-package.yml  pypi-release.yml  release.yml  releases.yml  run-tests.yml  zenodo-upload.yml
.reqs/: dev.txt  docs.txt  quality.txt
docs/: api.md  authors.md  background.md  benchmarking.md  changelog.md  conf.py  contributing.md  index.md  index.rst  license.md  localization.md  man.md  manpage.md  requirements.txt  robots.txt  usage.md
docs/_ext/: custom_manpage.py  custom_sitemap.py
docs/_extensions/: custom_sitemap.py
docs/_extra/: robots.txt
docs/_static/: custom.css
docs/_templates/: breadcrumbs.html
docs/content/: authors.md  background.md  benchmarking.md  changelog.md  contributing.md  license.md  usage.md
src/hijri_converter/: __init__.py  convert.py  helpers.py  locales.py  ummalqura.py
src/hijri_converter/locales/: __init__.py  ar.py  bn.py  en.py
src/hijriconverter/: __init__.py  calendars.py  convert.py  helper.py  ummalqura.py
src/hijriconverter/locales/: __init__.py  en.py
src/hijridate/: __init__.py  _version.py  convert.py  helpers.py  locales.py  ummalqura.py
tests/integration/: test_conversion.py  test_lengths.py  test_month_starts.py  test_references.py  test_starts.py
tests/integration/fixtures/: kfupm_comparison_calendar.json  month_starts.json  ummalqura_calendar_website.json  ummalqura_newspaper_issues.json
tests/other/: test_other.py
tests/other/data/: kfupm_comparison_calendar.json  ummalqura_calendar_website.json
tests/unit/: test_convert.py  test_helper.py  test_helpers.py  test_locales.py
