[metadata]
name = hijri-converter
version = attr: hijri_converter.__version__
author = Mohammed Alshehri
author_email =
description = Accurate Hijri-Gregorian date converter based on the Umm al-Qura calendar
long_description = file: README.md
long_description_content_type = text/markdown
keywords = hijri, gregorian, date, converter, ummalqura, saudi, calendar
license = MIT
license_files = LICENSE
url = https://github.com/dralshehri/hijri-converter
project_urls =
    Documentation = https://hijri-converter.readthedocs.io
    Source Code = https://github.com/dralshehri/hijri-converter
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Intended Audience :: Legal Industry
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Internationalization
    Topic :: Software Development :: Localization
    Topic :: Utilities
    Typing :: Typed

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.6
zip_safe = False

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203
per-file-ignores =
    src/**/__init__.py: F401
