[metadata]
name = hijridate
version = attr: hijridate.__version__
author = Mohammed Alshehri
author_email =
description = Accurate Hijri-Gregorian dates converter based on the Umm al-Qura calendar
keywords = hijri, gregorian, date, converter, ummalqura, saudi, calendar
license = MIT
license_files = LICENSE
url = https://github.com/dralshehri/hijridate
project_urls =
    Documentation = https://hijridate.readthedocs.io
    Source Code = https://github.com/dralshehri/hijridate
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Healthcare Industry
    Intended Audience :: Legal Industry
    License :: OSI Approved :: MIT License
    Natural Language :: Arabic
    Natural Language :: Bengali
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Internationalization
    Topic :: Software Development :: Localization
    Topic :: Utilities
    Typing :: Typed

[options]
packages = find:
package_dir =
    = src
include_package_data = True
python_requires = >=3.7
zip_safe = False

[options.packages.find]
where = src
